# baby-photoshop-cpp

./: .gitignore  BabyPhotoshop.cpp  CMakeLists.txt  Image_Class.h  README.md  imageprocessor.cpp  imageprocessor.h  main.cpp  main.qml
